# aragog

./: Cargo.toml  Dockerfile  README.md  configuration.yaml  fly.toml
src/: configuration.rs  lib.rs  main.rs  telemetry.rs
src/parser/: config.rs  dracotienda.rs  dungeonmarvels.rs  jugamosotra.rs  mod.rs  parser.rs
src/types/: types.rs
