[package]
name = "aragog"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "aragog"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.5.11"
reqwest = { version = "0.11.4", default-features = false, features = ["rustls-tls"] }
scraper = "0.17.1"
tokio = { version = "1.9.0", features = ["full"] }
tracing = "0.1.26"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
